crates/rumps-query/snapshots/scripts__219_module_let_string_misuse.snap
---
source: crates/rumps-query/tests/scripts.rs
description: "; Module member is a String; using it as Numeric must be\n; rejected at typecheck time, not panic at runtime.\n\nfun main() {\n  write M.x + 1\n}\n\nmodule M {\n  +let x = \"hello\"\n}\n"
---
ERROR: type `String` does not satisfy `Numeric` class
type `String` does not satisfy `Numeric` class
