crates/rumps-query/snapshots/scripts__21_short_circuit.snap
---
source: crates/rumps-query/tests/scripts.rs
description: "; Test: short-circuit evaluation\n; Uses SET side effects to verify RHS is/isn't evaluated\n\n; === Setup ===\nSET counter = 0\n\n; === Short-circuit AND (FALSE AND ...) ===\n; RHS should NOT be evaluated\n\nSET counter = 0\nLET r1 = FALSE AND {\n  SET counter = 100\n  TRUE\n}\nOUTPUT GET counter\n; Expected: 0 (block not evaluated)\n\n; === Non-short-circuit AND (TRUE AND ...) ===\n; RHS SHOULD be evaluated\n\nSET counter = 0\nLET r2 = TRUE AND {\n  SET counter = 200\n  TRUE\n}\nOUTPUT GET counter\n; Expected: 200 (block was evaluated)\n\n; === Short-circuit OR (TRUE OR ...) ===\n; RHS should NOT be evaluated\n\nSET counter = 0\nLET r3 = TRUE OR {\n  SET counter = 300\n  FALSE\n}\nOUTPUT GET counter\n; Expected: 0 (block not evaluated)\n\n; === Non-short-circuit OR (FALSE OR ...) ===\n; RHS SHOULD be evaluated\n\nSET counter = 0\nLET r4 = FALSE OR {\n  SET counter = 400\n  TRUE\n}\nOUTPUT GET counter\n; Expected: 400 (block was evaluated)\n\n; === Chained short-circuit ===\n\nSET counter = 0\nLET r5 = FALSE AND {\n  SET counter = 1\n  FALSE\n} AND {\n  SET counter = 2\n  TRUE\n}\nOUTPUT GET counter\n; Expected: 0 (first FALSE short-circuits entire chain)\n\nSET counter = 0\nLET r6 = TRUE OR {\n  SET counter = 1\n  TRUE\n} OR {\n  SET counter = 2\n  FALSE\n}\nOUTPUT GET counter\n; Expected: 0 (first TRUE short-circuits entire chain)\n\n; === Mixed AND/OR ===\n\nSET counter = 0\nLET r7 = (FALSE AND {\n  SET counter = 10\n  TRUE\n}) OR {\n  SET counter = 20\n  TRUE\n}\nOUTPUT GET counter\n; Expected: 20 (AND short-circuits, OR evaluates RHS)\n\nSET counter = 0\nLET r8 = (TRUE OR {\n  SET counter = 10\n  FALSE\n}) AND {\n  SET counter = 30\n  TRUE\n}\nOUTPUT GET counter\n; Expected: 30 (OR short-circuits, AND evaluates RHS)\n\nOUTPUT \"done\"\n"
---
ERROR: parse error at 1367..1371: unexpected `TRUE` (expected: OR, +, >=, <, ==, newline, dedent, ., AND, (, ||, ++, //, indent, -, &&, !=, }, ??, [, /, >, %, *, <=)
