crates/rumps-query/snapshots/scripts__221_fun_constraint_leak.snap
---
source: crates/rumps-query/tests/scripts.rs
description: "; Body of `foo` requires `Additive`; calling `foo(\"hello\")`\n; must be rejected at typecheck time even though `foo` is\n; defined before `main`. Verifies Phase 3 generalization.\n\nfun foo(x) { x + 1 }\n\nfun main() {\n  write foo(\"hello\")\n}\n"
---
ERROR: type `String` does not satisfy `Numeric` class
type `String` does not satisfy `Additive` class
