crates/rumps-query/snapshots/scripts__222_fun_constraint_leak_forward.snap
---
source: crates/rumps-query/tests/scripts.rs
description: "; Same as 221 but with `foo` defined AFTER `main`, exercising\n; Phase 4 retroactive constraint propagation through the\n; hoisted Pass 1 scheme.\n\nfun main() {\n  write foo(\"hello\")\n}\n\nfun foo(x) { x + 1 }\n"
---
ERROR: type `String` does not satisfy `Numeric` class
