crates/rumps-query/snapshots/scripts__224_toplevel_let_closure_constraint_leak.snap
---
source: crates/rumps-query/tests/scripts.rs
description: "; Body of closure `inc` requires `Numeric(T)`; calling\n; `inc(\"hello\")` from a forward-referencing `main` must be\n; rejected. Exercises Phase 3.2 (closure body harvest) and\n; Phase 4.3 (finalize for closure-RHS let).\n\nfun main() {\n  write inc(\"hello\")\n}\n\nlet inc = [T](x: T) -> T => x + 1\n"
---
ERROR: type `String` does not satisfy `Numeric` class
