crates/rumps-query/snapshots/scripts__228_missing_type_param_constraint.snap
---
source: crates/rumps-query/tests/scripts.rs
description: "; Explicitly-declared `T` without `Additive` is used in `x + 1`;\n; the definition must be rejected.\n\nfun foo[T](x: T) -> T { x + 1 }\n\nfun main() {\n  write foo(1)\n}\n"
---
ERROR: type parameter `T` requires `Numeric` constraint
type parameter `T` requires `Additive` constraint
